--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongodb": "^4.3.0"
+    "mongodb": "^4.3.0",
+    "mongoose": "^6.1.7"
   }
 }
